@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 # 
 # The Hadoop command script
 #
@@ -60,7 +60,7 @@ export HADOOP_HOME=`cd "$THIS_DIR/.." ; pwd`
 HADOOP_CONF_DIR="${HADOOP_CONF_DIR:-$HADOOP_HOME/conf}"
 
 if [ -f "${HADOOP_CONF_DIR}/hadoop-env.sh" ]; then
-  source "${HADOOP_CONF_DIR}/hadoop-env.sh"
+  . "${HADOOP_CONF_DIR}/hadoop-env.sh"
 fi
 
 # some Java parameters
