@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 # 
 # Run a Hadoop command on all slave hosts.
 
