@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 # 
 # The Hadoop record compiler
 #
@@ -31,7 +31,7 @@ HADOOP_HOME=`cd "$THIS_DIR/.." ; pwd`
 HADOOP_CONF_DIR="${HADOOP_CONF_DIR:-$HADOOP_HOME/conf}"
 
 if [ -f "${HADOOP_CONF_DIR}/hadoop-env.sh" ]; then
-  source "${HADOOP_CONF_DIR}/hadoop-env.sh"
+  . "${HADOOP_CONF_DIR}/hadoop-env.sh"
 fi
 
 # some Java parameters
