@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 
 # Stop hadoop DFS daemons.  Run this on master node.
 
